# moonbit-wasm-component-demo

./: .editorconfig  .gitignore  Makefile  README.md
adder/: moon.mod.json
calculator/: moon.mod.json
calculator/interface/docs/adder/add/: ffi.mbt  moon.pkg.json  top.mbt
command/: Cargo.toml
command/src/: bindings.rs
nix/: flake.nix  wac.nix
wit/adder/: world.wit
wit/calculator/: world.wit
