[package]
name = "command"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:command"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"docs:adder" = { path = "../wit/adder" }

[package.metadata.component.target]
path = "../wit/calculator/world.wit"
world = "app"

